# _s

./: README.md  pyproject.toml
src/fluoresce/: cli.py  main.py  models.py  paint.py  paint1.py  try_stdin.py
tests/: test_fluoresce.py
