[tool.poetry]
name = "fluoresce"
version = "0.0.0"  # handled by poetry-poetry_dynamic_versioning
description = "A utility for highlighting text"
authors = ["Matt Rixman <MatrixManAtYrService@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
poetry-dynamic-versioning = "^0.19.0"
textual = "^0.2.0b7"
dataclasses-json = "^0.5.7"
ipld = "^0.0.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grip = "^4.6.1"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.scripts]
_s = "fluoresce.cli:fluoresce"
fluoresce = "fluoresce.cli:fluoresce"
